--- a/src/css/Record.css
+++ b/src/css/Record.css
@@ -1,26 +1,32 @@
 .mic {
-    width: 80px;
-    height: 50px; 
-    padding: 10px;
+    width: 60px;
+    height: 60px; 
 } 
 
 .dot-red {
-    height: 25px;
-    width: 25px;
-    margin: 20px;
-    border: 5px;
+    height: 10px;
+    width: 10px;
+    margin-top: 10px;
+    margin-left: 8px;
     background-color: red;
     border-radius: 50%;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 .dot-green {
-    height: 25px;
-    width: 25px;
-    margin: 20px;
-    border: 5px;
+    height: 10px;
+    width: 10px;
+    margin-top: 10px;
+    margin-left: 8px;
     background-color: green;
     border-radius: 50%;
     display: inline-block;
 }
-  
+
+.record-wrap {
+    display: flex;
+    flex-wrap: wrap;
+    background: #424141;
+    border-radius: 25px;
+    /* justify-content:space-evenly; */
+}
