Commented: display inline box

--- a/src/css/Record.css
+++ b/src/css/Record.css
@@ -20,7 +20,7 @@
     margin-left: 8px;
     background-color: green;
     border-radius: 50%;
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 .record-wrap {
